@@ -1,4 +1,5 @@
 - bootloader configuration:
+  o add a "Do not touch ESP or MBR" option (mga#18770)
   o do not offer to pick the disk where to install grub2 on UEFI
   o filter GPT disks w/o a BIOS boot part (mga#18770)
 - logs:
